# advent-of-code

./: .gitignore
rust/: Cargo.toml  justfile
rust/2023/year-2023-day-01/: Cargo.toml
rust/2023/year-2023-day-01/benches/: benchmarks-criterion.rs  benchmarks.rs
rust/2023/year-2023-day-01/src/: part1.rs  part2.rs
rust/daily-template/: Cargo.toml
rust/daily-template/benches/: benchmarks-criterion.rs  benchmarks.rs
