[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
dhat = { workspace = true }
nom_locate = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "{{project-name}}-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
