[package]
name = "year-2023-day-01"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
dhat = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "year-2023-day-01-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "year-2023-day-01-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
